syntax = "proto3";

package POC3;

service POC3Service {
  rpc SetCameraPosition (CameraOrientation) returns (SetReply) {}
    rpc SpawnSphere (SpawnPosition) returns (SetReply) {}
}

message CameraOrientation {
  float x = 1;
    float y = 2;
    float z = 3;

    float rx = 4;
    float ry = 5;
    float rz = 6;
}

message SpawnPosition{
	float x = 1;
    float y = 2;
    float z = 3;
}

message SetReply{}